Fixed overflow issue in card.

--- a/src/HomePage/Footer/Footer.css
+++ b/src/HomePage/Footer/Footer.css
@@ -2,7 +2,8 @@ footer {
     position: relative;
     padding-top: 40px;
     background-color: lightblue;
-    color: palevioletred
+    color: palevioletred;
+    bottom: 0px;
 }
 
 p.Copyright{
