--- a/src/HomePage/Portfolio/Portfolio.css
+++ b/src/HomePage/Portfolio/Portfolio.css
@@ -61,7 +61,7 @@ p.mobileButton {
         padding: 15px;
         box-shadow: 7px 10px 20px grey;
         background-color: lightcyan;
-        font-size: 3vw
+        font-size: 2.75vw
     }
 
     p.mobileButton {
